--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div class="tab-content">
             <div id="ConvertN" class="tab-panel active">
-                <h2>ConvertN</h2>
+                <h2>แปลงหมายเลขโทรศัพท์</h2>
                 <div class="box">
                     <input type="text" id="phoneInput" placeholder="กรอกเบอร์โทรศัพท์" oninput="convertPhoneNumber()" onkeydown="copyOnEnter(event)">
                 </div>
@@ -137,7 +137,7 @@
             </div>
 
             <div id="DelHyphen" class="tab-panel">
-                <h2>DelHyphen</h2>
+                <h2>ลบขีดออกจากตัวเลข</h2>
                 <div class="box">
                     <input type="text" id="numberInput" placeholder="123-456-789" oninput="removeHyphen()" onkeydown="copyOnEnter2(event)">
                 </div>
