--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </div>
 
-        <div id="copyAlert">Copy!</div>
+        <div id="copyAlert">(>-<)</div>
     </div>
 
     <script>
